--- a/main.html
+++ b/main.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krystian Sawicki</title>
 
-    <link rel="icon" type="image/x-icon" href="res/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="resMain/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="js/main.js" async="true"></script>
@@ -35,7 +35,7 @@
             <div class="sideCategory">
                 <a class="sideCategoryHref" href="#mainContact" id="sideContact">CONTACT ME</a></div>
             <div class="sideCategory">
-                <a class="sideCategoryHref" href="./res/Krystian Sawicki CV.pdf" download>DOWNLOAD CV</a></div>
+                <a class="sideCategoryHref" href="./resMain/Krystian Sawicki CV.pdf" download>DOWNLOAD CV</a></div>
         </div>
     </div>
     <div class="main" id="mainHome">
@@ -56,43 +56,43 @@
                 <p class="spacer"></p>
                 <div class="mainSkillsSection skillsSection1">
                     <div class="skillContainer">
-                        <img class="skillsImg" id="htmlImg" src="res/html.png" alt="">
+                        <img class="skillsImg" id="htmlImg" src="resMain/html.png" alt="">
                         <p style="color: #000">HTML</p>
                     </div>
                     <div class="skillContainer">
-                        <img class="skillsImg" id="cssImg" src="res/css.png" alt="">
+                        <img class="skillsImg" id="cssImg" src="resMain/css.png" alt="">
                         <p style="color: #000">CSS</p>
                     </div>
                     <div class="skillContainer">
-                        <img class="skillsImg" id="javascriptImg" src="res/javascript.png" alt="">
+                        <img class="skillsImg" id="javascriptImg" src="resMain/javascript.png" alt="">
                         <p style="color: #000">JavaScript</p>
                     </div>
                 </div>
                 <div class="mainSkillsSection skillsSection2">
                     <div class="skillContainer">
-                        <img class="skillsImg" id="reactImg" src="res/react.png" alt="">
+                        <img class="skillsImg" id="reactImg" src="resMain/react.png" alt="">
                         <p style="color: #000">React</p>
                     </div>
                     <div class="skillContainer">
-                        <img class="skillsImg" id="vuejsImg" src="res/vuejs.png" alt="">
+                        <img class="skillsImg" id="vuejsImg" src="resMain/vuejs.png" alt="">
                         <p style="color: #000">Vue.js</p>
                     </div>
                     <div class="skillContainer">
-                        <img class="skillsImg" id="jqueryImg" src="res/jquery.png" alt="">
+                        <img class="skillsImg" id="jqueryImg" src="resMain/jquery.png" alt="">
                         <p style="color: #000">JQuery</p>
                     </div>
                 </div>
                 <div class="mainSkillsSection skillsSection3">
                     <div class="skillContainer">
-                        <img class="skillsImg" id="nodejsImg" src="res/nodejs.png" alt="">
+                        <img class="skillsImg" id="nodejsImg" src="resMain/nodejs.png" alt="">
                         <p style="color: #000">Node.js</p>
                     </div>
                     <div class="skillContainer">
-                        <img class="skillsImg" id="wordpressImg" src="res/wordpress.png" alt="">
+                        <img class="skillsImg" id="wordpressImg" src="resMain/wordpress.png" alt="">
                         <p style="color: #000">Wordpress</p>
                     </div>
                     <div class="skillContainer">
-                        <img class="skillsImg" id="cppImg" src="res/cpp.png" alt="">
+                        <img class="skillsImg" id="cppImg" src="resMain/cpp.png" alt="">
                         <p style="color: #000">C++</p>
                     </div>
                 </div>
