--- a/main.html
+++ b/main.html
@@ -110,8 +110,8 @@
         <div class="mainHome" id="mainProjects">
             <div class="mainHomeContent100" id="mainProjects2">
                 <p class="bold1">PROJECTS</p>
-                <div class="projectsCnt projectGame"><a href="" target="_blank" class="projectInner">2D GAME</a></div>
-                <div class="projectsCnt projectPlayer"><a href="" target="_blank" class="projectInner">MUSIC PLAYER</a><div class="projectInner"></div></div>
+                <div class="projectsCnt projectGame"><a href="./game.html" target="_blank" class="projectInner">2D GAME</a></div>
+                <div class="projectsCnt projectPlayer"><a href="./player.html" target="_blank" class="projectInner">MUSIC PLAYER</a><div class="projectInner"></div></div>
             </div>
         </div>
         <div class="mainHome mainEducation" id="mainEducation">
