--- a/player.html
+++ b/player.html
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/player.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="./main.js" async="true"></script>
+    <script src="./js/player.js" async="true"></script>
     
 </head>
 <body>
     <div class="container">
         <div class="top">
-            <img class="cover" src="./res/No_Role_Modelz.png" alt="">
+            <img class="cover" src="./resPlayer/No_Role_Modelz.png" alt="">
         </div>
         <div class="middle">
             <div class="title">No Role Modelz</div>
@@ -25,17 +25,17 @@
         </div>
         <div class="bottom">
             <audio controls class="song">
-                <source class="songSource" src="./res/No_Role_Modelz.mp3" type="audio/mpeg">
+                <source class="songSource" src="./resPlayer/No_Role_Modelz.mp3" type="audio/mpeg">
             </audio>
             <div class="controls">
                 <div class="backward">
-                    <img src="./res/backward.png" alt="">
+                    <img src="./resPlayer/backward.png" alt="">
                 </div>
                 <div class="play">
-                    <img src="./res/play.png" class="playIcon play" alt="">
+                    <img src="./resPlayer/play.png" class="playIcon play" alt="">
                 </div>
                 <div class="forward">
-                    <img src="./res/forward.png" alt="">
+                    <img src="./resPlayer/forward.png" alt="">
                 </div>
             </div>
             <input type="range" value="0" class="progress">
